[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vueprom"
version = "0.1.0"
description = "Emporia Vue energy monitoring Prometheus exporter"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyemvue>=0.18.9",
    "prometheus_client>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/petrovicboban/vueprom"
Source = "https://github.com/petrovicboban/vueprom"

[project.scripts]
vueprom = "vueprom:main"

[tool.setuptools]
py-modules = ["vueprom"]
