[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promexporters"
version = "0.4.0"
description = "Prometheus exporters for Emporia Vue energy monitoring, Govee temperature/humidity sensors, Airthings air-quality monitors, and Ecobee thermostats"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyemvue>=0.18.9",
    "prometheus_client>=0.24.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/petrovicboban/vueprom"
Source = "https://github.com/petrovicboban/vueprom"

[project.scripts]
promexporters = "promexporters.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promexporters*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
